fixed z-index on top bar top menu

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -457,6 +457,7 @@ a {
   left: -8px;
   width: 105%;
   top: -90px;
+  z-index: 100;
   -webkit-transition: .3s ease-out;
   -moz-transition: .3s ease-out;
   -o-transition: .3s ease-out;
@@ -545,6 +546,7 @@ a {
 
   #top-nav {
     text-align: left;
+    z-index: 500;
 
     img {
       padding-top: 4px;
